# library-fastapi

./: Dockerfile  README.md  database.py  docker-compose.yaml  main.py  pyproject.toml  settings.py
migrations/: env.py
migrations/versions/: c789c20c0202_init.py
services/: __init__.py
services/books/: __init__.py  books.py  models.py  routers.py  schemas.py
services/catalogs/: models.py  routers.py  schemas.py
